# graphiti-studio

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml  run.py
backend/app/: config.py  db.py  main.py  runtime_settings.py
backend/app/api/: chat.py  memory.py  projects.py  settings.py
backend/app/services/: capture.py  file_parser.py  graphiti_client.py  memory_adapter.py  pi_agent.py  pi_rpc_agent.py
backend/app/utils/: text_processor.py
backend/tests/: conftest.py  test_api_core.py  test_project_sync.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: style.css
frontend/src/api/: index.js
frontend/src/components/: ChatPanel.vue  GraphPanel.vue  QuickNote.vue  UploadZone.vue
frontend/src/composables/: useChat.js
frontend/src/router/: index.js
frontend/src/views/: Home.vue  Project.vue  Settings.vue
pi_extensions/: graphiti_memory.ts
